--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.12",
     "expo": "~45.0.0",
     "expo-checkbox": "~2.1.0",
+    "expo-dev-client": "~0.9.6",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.2",
     "react-native-web": "0.17.7",
     "webpack-dev-server": "~3.11.0",
-    "@expo/webpack-config": "~0.16.2"
+    "@react-native-community/datetimepicker": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
